# research-pipeline

./: Cargo.toml  FIGURE_DESIGN_RULES.md  build.rs
src/: app.rs  main.rs  pipeline.rs  screen_figures.rs  screen_input.rs  screen_output.rs  screen_select.rs
tests/: integration.rs
